--- a/assets/stylesheets/less/partials/extension.less
+++ b/assets/stylesheets/less/partials/extension.less
@@ -59,7 +59,7 @@
     .size(@width: 100%, @height: 260px);
 
     @h-extUpload-bottom: 60px;
-    @h-extUpload-noMain: @height-card-header + @height-card-instr + @h-extUpload-bottom + 1; 
+    @h-extUpload-noMain: @height-card-header + @height-card-instr + @h-extUpload-bottom + 1;
 
     .cardHeader {
         .fullScreen {
@@ -255,6 +255,7 @@
                     .flex(1 1 auto);
                     .flex-display;
                     .flex-wrap(wrap);
+                    min-width: 280px;
                 }
 
                 .instruction {
@@ -278,7 +279,6 @@
                         margin-top: 5px;
                         .size(@height: 34px);
                         .font(@size: 12px, @color: @color-font-greyish-brown);
-                        word-break: break-word;
                     }
                 }
 
@@ -310,7 +310,7 @@
                 display: none;
                 padding: 20px 30px;
                 background-color: @color-bg-white-three;
-            
+
                 .leftPart {
                     .size(@width: ~"calc(100% - 150px)");
                     float: left;
@@ -335,7 +335,7 @@
                         cursor: pointer;
                         .font(@size: 14px, @color: @color-font-select-blue);
                         text-decoration: underline;
-                    }   
+                    }
                 }
             }
         }
@@ -442,7 +442,7 @@
                         float: right;
                         .rounded(2px);
                         border: 1px solid @color-white;
-                    
+
                         .icon {
                             .horizontal-align;
                         }
@@ -603,7 +603,7 @@
                     float: right;
                     .size(30px, 30px);
                     background-color: @color-bg-select-blue;
-                    
+
                     .icon {
                         .center-align;
                     }
